samples/_failures_safe/1761551070_c1b7e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fca8996e.c: In function ‘main’:
./samples/SAFE/__tmp_fca8996e.c:187:13: error: expected declaration or statement at end of input
  187 |             }
      |             ^
./samples/SAFE/__tmp_fca8996e.c:187:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fca8996e.c:187:13: error: expected declaration or statement at end of input
